welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:2: error: ';' expected but ',' found.
  setpos{4,1}
          ^