welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  setpos{4,1}
}

  
/*
00
01 10
02 11 20
03 12 21 30
04 13 22 31 40
*/
  
def parcoursDiag(diag:Int){
  var x=diag
  var y=0
  while (x!=0){
    y+=1
    x-=1
    setPos(x,y)
  }
}